--- a/client-dev.yml
+++ b/client-dev.yml
@@ -13,3 +13,9 @@ spring:
 feign:
   circuitbreaker:
     enabled: true
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
