--- a/client-dev.yml
+++ b/client-dev.yml
@@ -9,6 +9,11 @@ spring:
       port: 8500
       discovery:
         register-health-check: false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 feign:
   circuitbreaker:
